2008-01-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* Location.cs: Store the offset (not a constant)

2007-12-29  Sebastien Pouliot  <sebastien@ximian.com> 

	* Location.cs: Add new constructor that accept a MethodDefinition 
	and an IL offset.

2007-12-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* Makefile.am: Add rocks to the build, switch compiler to linq
	* framework.mdp: Add rocks to the MonoDevelop project file, switch
	compiler to linq.
	* Location.cs: Add new constructors that accept a 
	[Method|Type]Definition to simplify rules.

2007-12-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyManager.cs: Make class static since we're now targetting
	the 2.0 framework.

2007-11-29  Sebastien Pouliot  <sebastien@ximian.com> 

	* Location.cs: Use StringBuilder in ToString. Add a new ctor that
	doesn't requires an offset (as it doesn't apply to many rules).
	Source now conforms to Mono source style.

2007-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* RuleInformation.cs: Remove ReadOnly property.
	* RuleInformationManager.cs: Remove usage for ReadOnly.

2007-10-09  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Put parenthesis and dollar in correct order for avoid the
	make self-test fail.

2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* framework.mdp: Now built with 2.0 rutime.

2007-09-25  Nestor Salceda  <nestor.salceda@gmail.com>

	* Runner.cs: Implemented the inclusion and exclusion of rules.

2007-09-14  Nestor Salceda  <nestor.salceda@gmail.com>

	* gendarme-framework.pc.in:  The framework will be installed in
	${prefix}/lib/gendarme not in ${prefix}/lib/Gendarme.Framework.  It
	works correctly now.

2007-09-03  Nestor Salceda  <nestor.salceda@gmail.com>

	* RuleCollection.cs: Removed the indexer with name as parameter.

2007-08-31  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* gendarme-framework.pc.in, Makefile.am: Install Gendarme.Framework to
	be reusable (pkg-config) with other runners.
